# knightwatch

./: Cargo.toml  LICENSE  README.md
src/: main.rs  prelude.rs  telemetry.rs  types.rs  utils.rs
src/api/: constants.rs  end_points.rs  handlers.rs  mod.rs  models.rs  utils.rs
src/api/assets/: view.css  view.html  view.js
src/config/: app.rs  args.rs  mod.rs  paths.rs  persistent.rs
src/core/: mod.rs  process_tracker.rs  screen.rs  telemetry.rs  types.rs  utils.rs
src/errors/: error.rs
src/process_tracker/: enums.rs  mod.rs  structs.rs  tracker.rs  utils.rs
src/screen_capture/: capture.rs  mod.rs  structs.rs
src/telegram_bot/: bot.rs  mod.rs  models.rs  utils.rs
src/webhook/: dispatcher.rs  mod.rs  structs.rs
