[package]
name = "screenwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
config = "0.15.19"
directories = "6.0.0"
dotenv = "0.15.0"
futures = "0.3.32"
image = { version = "0.25.9", features = ["jpeg", "png"] }
itertools = "0.14.0"
jsonwebtoken = "10.3.0"
nix = "0.31.1"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sysinfo = "0.38.2"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.1"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
] }
